--- a/cf/rds-subnet-security-group.yaml
+++ b/cf/rds-subnet-security-group.yaml
@@ -21,7 +21,7 @@ Resources:
   DBSubnetGroup:
     Type: AWS::RDS::DBSubnetGroup
     Properties:
-      DBSubnetGroupDescription: !Sub Biomage subnet group for ${Environment}.
+      DBSubnetGroupDescription: !Sub Cellenics subnet group for ${Environment}.
       DBSubnetGroupName: !Sub rds-subnet-group-${Environment}
       SubnetIds:
         Fn::Split: [',', Fn::ImportValue: !Sub "eksctl-biomage-${Environment}-cluster::SubnetsPrivate"]
@@ -32,7 +32,7 @@ Resources:
   RDSSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
-      GroupDescription: !Sub "Biomage RDS security group for ${Environment}"
+      GroupDescription: !Sub "Cellenics RDS security group for ${Environment}"
       SecurityGroupEgress: []
       SecurityGroupIngress:
         - SourceSecurityGroupId:
