--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -204,12 +204,13 @@ jobs:
           # CELLENICS_VPC_ID is set if using custom cluster deployment. In this case, use the custom template file.
           # If not set, create an empty template file to let eksctl create a new cluster for the deployment.
           if [ ! -z "$CELLENICS_VPC_ID" ]; then
-            cat infra/config/cluster/cluster-config-template.yaml \
-            | sed "s/CELLENICS_VPC_ID/$CELLENICS_VPC_ID/g" \
-            | sed "s/PRIVATE_SUBNET_1_ID/$PRIVATE_SUBNET_1_ID/g" \
-            | sed "s/PRIVATE_SUBNET_2_ID/$PRIVATE_SUBNET_2_ID/g" \
-            | sed "s/PUBLIC_SUBNET_1_ID/$PUBLIC_SUBNET_1_ID/g" \
-            | sed "s/PUBLIC_SUBNET_2_ID/$PUBLIC_SUBNET_2_ID/g" \
+            yq '
+                .vpc.id = strenv(CELLENICS_VPC_ID) |
+                .vpc.subnets.private.private-1 = strenv(PRIVATE_SUBNET_1_ID) |
+                .vpc.subnets.private.private-2 = strenv(PRIVATE_SUBNET_2_ID) |
+                .vpc.subnets.public.public-1 = strenv(PUBLIC_SUBNET_1_ID) |
+                .vpc.subnets.public.public-2 = strenv(PUBLIC_SUBNET_2_ID)
+            ' infra/config/cluster/cluster-config-template.yaml
             > /tmp/cluster-config-values.yaml
           else
             touch /tmp/cluster-config-values.yaml
