--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -218,7 +218,7 @@ jobs:
           yq eval-all '. as $item ireduce ({}; . *d $item)' infra/config/cluster/cluster-template.yaml /tmp/cluster-config-values.yaml > /tmp/cluster-$CLUSTER_ENV.yaml
           cat /tmp/cluster-$CLUSTER_ENV.yaml
 
-          aws s3 cp /tmp/cluster-$CLUSTER_ENV.yaml s3://biomage-backups-staging-242905224710/cluster-${{ matrix.environment-name }}-$CLUSTER_ENV.yaml
+          aws s3 cp /tmp/cluster-$CLUSTER_ENV.yaml s3://biomage-backups-$CLUSTER_ENV-${{ secrets.AWS_ACCOUNT_ID }}/cluster-${{ matrix.environment-name }}-$CLUSTER_ENV.yaml
         env:
           AWS_REGION: ${{ secrets.AWS_REGION }}
           CELLENICS_VPC_ID: ${{ secrets.CELLENICS_VPC_ID }}
