--- a/cf/cognito-case-insensitive.yaml
+++ b/cf/cognito-case-insensitive.yaml
@@ -11,10 +11,6 @@ Parameters:
       - production
     Description: The environment for which the buckets need to be created.
 
-Conditions:
-  isProd: !Equals [!Ref Environment, "production"]
-  isHMSAccount: !Equals [ !Ref AWS::AccountId, "160782110667"]
-
 Outputs:
   UserPoolId:
     Value: !Ref UserPool
@@ -25,48 +21,8 @@ Outputs:
     Value: !GetAtt UserPool.ProviderName
     Export:
       Name: !Sub 'biomage-user-pool-case-insensitive-${Environment}::UserPoolProviderName'
-  UIRoleArn:
-    Description: ARN of the UI role
-    Value: !GetAtt UIRole.Arn
-    Export:
-      Name: !Sub 'biomage-user-pool-case-insensitive-${Environment}::UIRoleArn'
 
 Resources:
-  UIRole:
-    Type: "AWS::IAM::Role"
-    Properties:
-      RoleName: !Sub "biomage-user-pool-case-insensitive-ui-auth-user-role-${Environment}"
-      AssumeRolePolicyDocument: |-
-        {
-          "Version": "2012-10-17",
-          "Statement": [
-            {
-              "Sid": "",
-              "Effect": "Allow",
-              "Principal": {
-                "Federated": "cognito-identity.amazonaws.com"
-              },
-              "Action": "sts:AssumeRoleWithWebIdentity",
-              "Condition": {
-                "ForAnyValue:StringLike": {
-                  "cognito-identity.amazonaws.com:amr": "authenticated"
-                }
-              }
-            }
-          ]
-        }
-      Path: /
-      Policies:
-        - PolicyName: !Sub "can-execute-lambda-${Environment}"
-          PolicyDocument:
-            Version: "2012-10-17"
-            Statement:
-              - Effect: Allow
-                Action:
-                  - "lambda:InvokeFunction"
-                Resource:
-                  Fn::ImportValue: !Sub PostRegisterLambdaArn-${Environment}
-
   SMSRole:
     Type: "AWS::IAM::Role"
     Properties:
@@ -106,6 +62,7 @@ Resources:
     Type: AWS::Cognito::UserPool
     Properties:
       UserPoolName: !Sub "biomage-user-pool-case-insensitive-${Environment}"
+      DeletionProtection: ACTIVE
       AccountRecoverySetting:
         RecoveryMechanisms:
           - Name: verified_email
@@ -128,7 +85,7 @@ Resources:
         # To customize the From field, we have to provide the ARN of an SES account
         # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-userpool-emailconfiguration.html
         EmailSendingAccount: COGNITO_DEFAULT
-        ReplyToEmailAddress: !If [isHMSAccount, "alex_pickering@hms.harvard.edu", "hello@biomage.net"]
+        ReplyToEmailAddress: "alex_pickering@hms.harvard.edu"
       EnabledMfas:
         - SMS_MFA
         - SOFTWARE_TOKEN_MFA
@@ -172,4 +129,4 @@ Resources:
     Type: AWS::Cognito::UserPoolDomain
     Properties:
       UserPoolId: !Ref UserPool
-      Domain: !If [isHMSAccount, !Sub "hms-auth-${Environment}-${AWS::AccountId}", !Sub "biomage-auth-${Environment}-${AWS::AccountId}"]
+      Domain: !Sub "hms-auth-${Environment}-${AWS::AccountId}"
