--- a/cf/batch-job-definition.yaml
+++ b/cf/batch-job-definition.yaml
@@ -20,6 +20,7 @@ Parameters:
 
 Conditions:
   isPipelinePRStaged: !And [ !Equals [!Ref Environment, "staging"], !Not [ !Equals [!Ref PipelinePRNum, "" ]]]
+  isHMSAccount: !Equals [ !Ref AWS::AccountId, "160782110667"]
 
 Resources:
   BatchPipelineJob:
@@ -31,8 +32,14 @@ Resources:
           - ./start-batch.sh
         Image: !If [
                   isPipelinePRStaged,
-                  !Sub "160782110667.dkr.ecr.us-east-1.amazonaws.com/pipeline:batch-refs-pull-${PipelinePRNum}-merge",
-                  !Sub "160782110667.dkr.ecr.us-east-1.amazonaws.com/pipeline:batch-${Environment}"
+                  !If [ isHMSAccount,
+                    !Sub "160782110667.dkr.ecr.us-east-1.amazonaws.com/pipeline:batch-refs-pull-${PipelinePRNum}-merge",
+                    !Sub "242905224710.dkr.ecr.us-west-1.amazonaws.com/pipeline:batch-refs-pull-${PipelinePRNum}-merge"
+                  ],
+                  !If [ isHMSAccount,
+                    !Sub "160782110667.dkr.ecr.us-east-1.amazonaws.com/pipeline:batch-${Environment}",
+                    !Sub "242905224710.dkr.ecr.us-west-1.amazonaws.com/pipeline:batch-${Environment}",
+                  ],
                 ]
         ResourceRequirements:
           - Type: VCPU
