--- a/.github/workflows/deploy-changed-cf.yaml
+++ b/.github/workflows/deploy-changed-cf.yaml
@@ -49,9 +49,7 @@ jobs:
         run: |
           IFS=',' read -ra valid_options <<< "$OPTIONS"
           for i in "${valid_options[@]}"; do
-            echo "Checking if $i is selected"
-            echo "Selected ${{ github.event.inputs.environment_option }}"
-            if [[ "${{ github.event.inputs.environment_option }}" == "$i" ]]; then
+            if [[ "${{ github.event.inputs.environment_name }}" == "$i" ]]; then
               echo "Valid option selected"
               exit 0
             fi
