--- a/.github/workflows/load-config.yaml
+++ b/.github/workflows/load-config.yaml
@@ -4,6 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       environment:
+        type: string
         description: "Environment for validation (leave blank to skip validation)"
         required: false
 
