--- a/.github/workflows/load-config.yaml
+++ b/.github/workflows/load-config.yaml
@@ -11,6 +11,7 @@ on:
   workflow_call:
     inputs:
       environment:
+        type: string
         description: "Environment for validation (leave blank to skip validation)"
         required: false
     outputs:
