--- a/.github/workflows/deploy-changed-cf.yaml
+++ b/.github/workflows/deploy-changed-cf.yaml
@@ -33,7 +33,7 @@ permissions:
 
 jobs:
   load-config:
-    uses: ${{ github.repository_owner }}/iac/.github/workflows/load-config.yaml@hms-merge
+    uses: biomage-org/iac/.github/workflows/load-config.yaml@hms-merge
     # uses: ./.github/workflows/load-config.yaml ## USE THIS WHEN MERGING IN MASTER
     with:
       environment: ${{ github.event.inputs.environment_name }}
