--- a/.github/workflows/deploy-changed-cf.yaml
+++ b/.github/workflows/deploy-changed-cf.yaml
@@ -41,15 +41,17 @@ jobs:
     name: Output selected option
     needs: load-config
     runs-on: ubuntu-20.04
+    env:
+      DEPLOYMENT_CONFIG: ${{ needs.load-config.outputs.config }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2 # TODO: check if there is a v3
       - name: Show which option was selected
-        run: echo "The option selected was ${{ needs.load-config.outputs.environment_names }}"
+        run: echo "The option selected was $(echo $DEPLOYMENT_CONFIG | jq -r '.environment_names') $DEPLOYMENT_CONFIG"
 
 
   # set-environments:
-  #
+  
   #   name: Set up environment name and environment type for action run
   #   runs-on: ubuntu-20.04
   #   strategy:
@@ -225,74 +227,91 @@ jobs:
   #       with:
   #         args: ${{ matrix.template }}
 
-  # deploy-templates:
-  #   name: Deploy changed CloudFormation template
-  #   runs-on: ubuntu-20.04
-  #   needs: [set-environments, check-secrets, get-modified-templates, lint-templates]
-  #   if: github.ref == 'refs/heads/master' || github.event_name == 'workflow_dispatch'
-  #   outputs:
-  #     deploy-rds: ${{ steps.set-name.outputs.deploy-rds }}
-  #   strategy:
-  #     max-parallel: 1
-  #     matrix:
-  #       environment-type: ${{ fromJson(needs.set-environments.outputs.env-type) }}
-  #       environment-name: ${{ fromJson(needs.set-environments.outputs.env-name) }}
-  #       exclude:
-  #         - environment-name: trv
-  #           environment-type: staging
-  #         - environment-name: alabs
-  #           environment-type: staging
-  #       template: ${{fromJson(needs.get-modified-templates.outputs.files)}}
-  #   environment: ${{ matrix.environment-name }}
-  #   env:
-  #     CLUSTER_ENV: ${{ matrix.environment-type }}
-  #     TEMPLATES_WITH_EXTRA_PARAMS: ("cf/sns.yaml" "cf/ses.yaml" "cf/post-register-lambda.yaml")
-  #   steps:
-  #     - id: checkout
-  #       name: Check out source code
-  #       uses: actions/checkout@v2
+#   deploy-templates:
+#     name: Deploy changed CloudFormation template
+#     runs-on: ubuntu-20.04
+#     needs: [set-environments, check-secrets, get-modified-templates, lint-templates]
+#     if: github.ref == 'refs/heads/master' || github.event_name == 'workflow_dispatch'
+#     outputs:
+#       deploy-rds: ${{ steps.set-name.outputs.deploy-rds }}
+#     strategy:
+#       max-parallel: 1
+#       matrix:
+#         environment-type: ${{ fromJson(needs.set-environments.outputs.env-type) }}
+#         environment-name: ${{ fromJson(needs.set-environments.outputs.env-name) }}
+#         exclude:
+#           - environment-name: trv
+#             environment-type: staging
+#           - environment-name: alabs
+#             environment-type: staging
+#         template: ${{fromJson(needs.get-modified-templates.outputs.files)}}
+#     environment: ${{ matrix.environment-name }}
+#     env:
+#       CLUSTER_ENV: ${{ matrix.environment-type }}
+#       TEMPLATES_WITH_EXTRA_PARAMS: ("cf/sns.yaml" "cf/ses.yaml" "cf/post-register-lambda.yaml", "cf/canaries.yaml", "cf/cognito-case-insensitive.yaml")
+#     steps:
+#       - id: checkout
+#         name: Check out source code
+#         uses: actions/checkout@v2
 
-  #     - id: set-up-creds
-  #       name: Configure AWS credentials
-  #       uses: aws-actions/configure-aws-credentials@v2
-  #       with:
-  #         role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/ci-iac-role
-  #         aws-region: ${{ secrets.AWS_REGION }}
+#       # - name: Get parameters
+#       #   id: get-params
+#       #   run: echo "::set-output name=params::$(./get-params-for-template.sh ${{ matrix.template }})"
+#       #   shell: bash
 
-  #     - id: set-name
-  #       name: Set name of the CloudFormation stack
-  #       run: |-
-  #         echo "Ref is $GITHUB_REF"
-  #         BASE_NAME=$(basename $FILE_NAME | sed "s/\..*//")
-  #         STACK_NAME=biomage-$BASE_NAME-$CLUSTER_ENV
+#       - id: set-up-creds
+#         name: Configure AWS credentials
+#         uses: aws-actions/configure-aws-credentials@v2
+#         with:
+#           role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/ci-iac-role
+#           aws-region: ${{ secrets.AWS_REGION }}
 
-  #         echo "stack-name=$STACK_NAME" >> $GITHUB_OUTPUT
+#       - id: set-name
+#         name: Set name of the CloudFormation stack
+#         run: |-
+#           echo "Ref is $GITHUB_REF"
+#           BASE_NAME=$(basename $FILE_NAME | sed "s/\..*//")
+#           STACK_NAME=biomage-$BASE_NAME-$CLUSTER_ENV
 
-  #         if [ "$BASE_NAME" == 'rds' ]; then
-  #           echo "deploy-rds=true" >> $GITHUB_OUTPUT
-  #         fi
+#           echo "stack-name=$STACK_NAME" >> $GITHUB_OUTPUT
 
-  #       env:
-  #         FILE_NAME: ${{ matrix.template }}
+#           if [ "$BASE_NAME" == 'rds' ]; then
+#             echo "deploy-rds=true" >> $GITHUB_OUTPUT
+#           fi
 
-  #     - id: using-self-signed-certificate
-  #       name: Get config for whether deployment is using self-signed certificate
-  #       uses: mikefarah/yq@master
-  #       with:
-  #         cmd: yq '.[env(ENVIRONMENT_NAME)].selfSignedCertificate' 'infra/config/github-environments-config.yaml'
-  #       env:
-  #         ENVIRONMENT_NAME: ${{ matrix.environment-name }}
+#         env:
+#           FILE_NAME: ${{ matrix.template }}
 
-  #     - id: deploy-template
-  #       name: Deploy CloudFormation template
-  #       if: ${{ !contains(matrix.template, 'irsa-') && !contains(env.TEMPLATES_WITH_EXTRA_PARAMS, matrix.template) }}
-  #       uses: aws-actions/aws-cloudformation-github-deploy@v1
-  #       with:
-  #         parameter-overrides: "Environment=${{ matrix.environment-type }}"
-  #         name: ${{ steps.set-name.outputs.stack-name }}
-  #         template: ${{ matrix.template }}
-  #         no-fail-on-empty-changeset: "1"
-  #         capabilities: "CAPABILITY_IAM,CAPABILITY_NAMED_IAM,CAPABILITY_AUTO_EXPAND"
+#       - id: using-self-signed-certificate
+#         name: Get config for whether deployment is using self-signed certificate
+#         uses: mikefarah/yq@master
+#         with:
+#           cmd: yq '.[env(ENVIRONMENT_NAME)].selfSignedCertificate' 'infra/config/github-environments-config.yaml'
+#         env:
+#           ENVIRONMENT_NAME: ${{ matrix.environment-name }}
+
+# ## TODO - GET THE "parameter-overrides" dynamically, to use one deploy action for all templates
+#       - id: deploy-template
+#         name: Deploy CloudFormation template
+#         if: ${{ !contains(matrix.template, 'irsa-') && !contains(env.TEMPLATES_WITH_EXTRA_PARAMS, matrix.template) }}
+#         uses: aws-actions/aws-cloudformation-github-deploy@v1
+#         with:
+#           parameter-overrides: ${{ steps.get-params.outputs.params }}
+#           name: ${{ steps.set-name.outputs.stack-name }}
+#           template: ${{ matrix.template }}
+#           no-fail-on-empty-changeset: "1"
+#           capabilities: "CAPABILITY_IAM,CAPABILITY_NAMED_IAM,CAPABILITY_AUTO_EXPAND"
+
+#       - id: deploy-canaries-template
+#         name: Deploy CloudFormation PostRegisterLambda template
+#         if: ${{ matrix.template == 'cf/canaries.yaml' }}
+#         uses: aws-actions/aws-cloudformation-github-deploy@v1
+#         with:
+#           parameter-overrides: "Environment=${{ matrix.environment-type }},SupportEmail=${{ needs.load-config.outputs.support_email }}"
+#           name: ${{ steps.set-name.outputs.stack-name }}
+#           template: ${{ matrix.template }}
+#           no-fail-on-empty-changeset: "1"
+#           capabilities: "CAPABILITY_IAM,CAPABILITY_NAMED_IAM,CAPABILITY_AUTO_EXPAND"
 
   #     - id: deploy-post-register-lambda-template
   #       name: Deploy CloudFormation PostRegisterLambda template
