--- a/.github/workflows/deploy-changed-cf.yaml
+++ b/.github/workflows/deploy-changed-cf.yaml
@@ -46,7 +46,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2 # TODO: check if there is a v3
       - name: Show which option was selected
-        run: echo "The option selected was $(echo ${{ needs.load-config.outputs.config }} | jq -r '.environment_names')"
+        run: |
+          CONFIG='${{ needs.load-config.outputs.config }}'
+          ENVIRONMENTS=$(echo $CONFIG | jq -r '.environment_names')
+          echo "The options are: $ENVIRONMENTS"
 
 
   # set-environments:
